gitops/apps/rhcl-demo-split/app-0-upstream-sample/resources/06-httproutes.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: mcp-server1-route
  namespace: mcp-system
  labels:
    mcp-server: 'true'
  annotations:
    argocd.argoproj.io/sync-wave: "26"
spec:
  parentRefs:
    - name: mcp-gateway
      namespace: mcp-system
  hostnames:
    - 'server1.mcp.local'
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: mcp-test-server1
          port: 9090
